@@ -121,28 +121,14 @@ constants.colors = {
 
 constants.default_max_rows = 8
 
-constants.derived_type_to_class = {
-  ["assembling-machine"] = "entity",
-  ["beacon"] = "entity",
-  ["boiler"] = "entity",
-  ["burner-generator"] = "entity",
-  ["car"] = "entity",
+constants.type_to_class = {
+  ["entity"] = "entity",
   ["equipment-category"] = "equipment_category",
   ["equipment"] = "equipment",
   ["fluid"] = "fluid",
   ["fuel-category"] = "fuel_category",
-  ["furnace"] = "entity",
-  ["generator"] = "entity",
-  ["inserter"] = "entity",
   ["item-group"] = "group",
   ["item"] = "item",
-  ["lab"] = "entity",
-  ["locomotive"] = "entity",
-  ["mining-drill"] = "entity",
-  ["offshore-pump"] = "entity",
-  ["pump"] = "entity",
-  ["radar"] = "entity",
-  ["reactor"] = "entity",
   ["recipe-catgory"] = "recipe_category",
   ["recipe"] = "recipe",
   ["resource-catgory"] = "resource_category",
@@ -367,6 +353,7 @@ constants.gui_strings = {
   equipment_category = { "gui.rb-equipment-category" },
   equipment = { "gui.rb-equipment" },
   equipment_properties = { "gui.rb-equipment-properties" },
+  expected_resources = { "gui.rb-expected-resources" },
   fixed_recipe = { "gui.rb-fixed-recipe" },
   fluid_consumption = { "gui.rb-fluid-consumption" },
   fluid = { "gui.rb-fluid" },
@@ -382,6 +369,7 @@ constants.gui_strings = {
   fuel_pollution = { "description.fuel-pollution" },
   fuel_value = { "description.fuel-value" },
   fuzzy_search = { "gui.rb-fuzzy-search" },
+  gathered_from = { "gui.rb-gathered-from" },
   general = { "gui.rb-general" },
   generator = { "gui.rb-generator" },
   get_blueprint = { "gui.rb-get-blueprint" },
@@ -757,6 +745,7 @@ constants.pages = {
         { type = "plain", source = "size", formatter = "area" },
       },
     },
+    { type = "list_box", source = "expected_resources" },
     { type = "list_box", source = "can_mine" },
     { type = "list_box", source = "resource_categories", default_state = "hidden" },
     { type = "list_box", source = "can_craft", max_rows = 10 },
@@ -861,6 +850,7 @@ constants.pages = {
     { type = "list_box", source = "product_of" },
     { type = "list_box", source = "rocket_launch_product_of" },
     { type = "list_box", source = "rocket_launch_products" },
+    { type = "list_box", source = "gathered_from" },
     { type = "list_box", source = "mined_from" },
     { type = "list_box", source = "researched_in" },
     { type = "list_box", source = "burned_in" },
@@ -980,7 +970,9 @@ constants.prototypes.filtered_entities = {
     { filter = "type", type = "pump" },
     { filter = "type", type = "radar" },
     { filter = "type", type = "reactor" },
+    { filter = "type", type = "simple-entity" },
     { filter = "type", type = "spider-vehicle" },
+    { filter = "type", type = "tree" },
   },
   mining_drill = { { filter = "type", type = "mining-drill" } },
   offshore_pump = { { filter = "type", type = "offshore-pump" } },
