@@ -192,6 +192,7 @@ rb-equipment-category=Equipment category
 rb-equipment=Equipment
 rb-equipment-properties=Equipment properties
 rb-expand=Expand
+rb-expected-resources=Expected resources
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
 rb-fluid-consumption=Fluid consumption
@@ -204,6 +205,7 @@ rb-fuel-categories=Fuel categories
 rb-fuel-category=Fuel category
 rb-fuzzy-search-description=More lenient pattern matching for searches.\n[font=default-semibold]NOTE:[/font] After changing this setting, you will need to search again in order for the change to take effect.
 rb-fuzzy-search=Fuzzy search
+rb-gathered-from=Gathered from
 rb-general=General
 rb-generator=Generator
 rb-get-blueprint=Get blueprint
