@@ -1,7 +1,13 @@
+local table = require("__flib__.table")
+
 local util = require("scripts.util")
 
-return function(database, dictionaries)
-  for name, prototype in pairs(global.prototypes.entity) do
+return function(database, dictionaries, metadata)
+  metadata.gathered_from = {}
+
+  --- @type table<string, LuaEntityPrototype>
+  local prototypes = global.prototypes.entity
+  for name, prototype in pairs(prototypes) do
     local equipment_categories = util.unique_obj_array()
     local equipment = util.unique_obj_array()
     local equipment_grid = prototype.grid_prototype
@@ -19,13 +25,27 @@ return function(database, dictionaries)
 
     local fuel_categories = util.process_energy_source(prototype) or {}
 
+    local expected_resources
+    local mineable = prototype.mineable_properties
+    if mineable and mineable.minable and #mineable.products > 0 and mineable.products[1].name ~= name then
+      expected_resources = table.map(mineable.products, function(product)
+        if not metadata.gathered_from[product.name] then
+          metadata.gathered_from[product.name] = {}
+        end
+        table.insert(metadata.gathered_from[product.name], { class = "entity", name = name })
+        return { class = product.type, name = product.name, amount_ident = util.build_amount_ident(product) }
+      end)
+    end
+
     database.entity[name] = {
       accepted_equipment = equipment,
       blueprintable = util.is_blueprintable(prototype),
       can_burn = {},
       class = "entity",
+      enabled_at_start = expected_resources and true or false, -- FIXME: This is inaccurate
       entity_type = { class = "entity_type", name = prototype.type },
       equipment_categories = equipment_categories,
+      expected_resources = expected_resources,
       fuel_categories = fuel_categories,
       placed_by = util.process_placed_by(prototype),
       prototype_name = name,
