@@ -8,7 +8,8 @@ Date: ????
     - Added new interactions:
       - [Entity] Shift + click to get a blueprint (not just on the recipe screen) (#98)
     - Added new page contents:
-      - [Entity] Entity type
+      - [Entity] Entity type, expected resources
+      - [Item] Gathered from
     - Added new pages:
       - Entity type: All entities of the given type
 ---------------------------------------------------------------------------------------------------
